--- a/_layouts/roulette.html
+++ b/_layouts/roulette.html
@@ -5,7 +5,8 @@ layout: default
 <h1>{{page.title}}</h1>
 {{content}}
 
-
+<h2>{{page.title}}</h1>
+<html>
 <body onload="init()">
 	<center>
 		<div>
@@ -326,3 +327,4 @@ layout: default
 		}
 	})
 </script>
+</html>
