--- a/_layouts/roulette.html
+++ b/_layouts/roulette.html
@@ -10,7 +10,7 @@ layout: default
 <body onload="init()">
 	<center>
 		<div>
-			<h1 class="shotterudTitle">Roulette</h1>
+			<h1>Roulette</h1>
 		</div>
 		<div>
 			<input id="inputName" placeholder="Name">
