--- a/_includes/roulette_wheel.html
+++ b/_includes/roulette_wheel.html
@@ -1,5 +1,69 @@
+<body>
+	<center>
+		<div>
+			<h1>Roulette</h1>
+		</div>
+		<div>
+			<input id="inputName" placeholder="Name">
+			<button id="addButton" onclick="addName()">Add</button>
+		</div>
+		<div>
+			<ul id="names">
+			</ul>
+		</div>
+	</center>
+	<div class="rouletteContainer">
+		<div class="line">
+		</div>
+		<div id="fillMeUpDaddy" class="roulette">
+		</div>
+	</div>
+	<br><br><br><br><br><br><br><br>
+	<center>
+		<div>
+			<button id="startButton" onclick="play()">Roll</button>
+		</div>
+	</center>
+	<br><br>
+	<div>
+		<center>
+			<button onclick="clearAll(-1)">Clear all</button>
+		</center>
+	</div>
+	<div id="winners" class="winners"></div>
+	<br><br>
+	<div>
+		<h1 class="shotterudTitle" style="font-size: 75px; text-align: center;">Random timer</h1>
+	</div>
+	<div>
+		<center>
+			<input id="timerName" placeholder="Name">
+		</center>
+	</div>
+	<br>
+	<div id="minMax">
+		<div>
+				<input id="min" type="number" placeholder="min min" style="align-self: flex-start;">
+		</div>
+		<div>
+			<h2 id="arrow"> to </h2>
+		</div>
+		<div>
+				<input id="max" type="number" placeholder="max min" style="align-self: flex-end;">
+		</div>
+	</div>
+	<br>
+	<center>
+		<div id="addTimer">
+			<button onclick="addTimer()">Add timer</button>
+		</div>
+		<br>
+		<div id="removeButtons"></div>
+		<br><br>
+	<div id="timerContainer"></div>
+	</center>
+</body>
 <script>
-	{newline}
 	var amountOfBoxes = 100;
 
 	var order = [];
