--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -10,7 +10,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #dce027;
+    background-color: #c40300;
 }
 
 ::-webkit-scrollbar-track {
