--- a/css/roulette.css
+++ b/css/roulette.css
@@ -2,7 +2,7 @@ body, html {
 	padding: 0;
 	margin: 0;
     font-family: "Roboto", sans-serif; 
-    background-color: #143642;
+    background-color: #000000;
 }
 
 #addTimer{
@@ -32,7 +32,7 @@ input[type=number]{
 
 .shotterudTitle{
     font-size: 94px;
-    font-color: #191923;
+    font-color: #c40300;
     z-index: 1;
 }
 
@@ -146,7 +146,7 @@ button {
     font-family: "Open Sans", Helvetica;
     border-radius: 4px;
     border-bottom: 1px solid rgba( 28, 227, 125, 0.5 );
-    background: rgb(50, 151, 143);
+    background: rgb(196, 3, 0);
     color: #fff;
     box-shadow: 0px 0px 0px rgba( 15, 165, 60, 0.1 );
     
@@ -178,5 +178,5 @@ button {
   button:active {
     top: 0px;
     box-shadow: 0px 0px 0px rgba( 15, 165, 60, 0.0 );
-    background: rgb(12, 167, 97);
+    background: rgb(230, 6, 2);
   }
