--- a/css/roulette.css
+++ b/css/roulette.css
@@ -11,6 +11,10 @@ body, html {
     justify-content: center;
 }
 
+h1,h2,h3,h4,h5,h6 {
+	color: #c40300;
+}
+
 input[type=number]{
     width: 180px;
 }
