--- a/css/roulette.css
+++ b/css/roulette.css
@@ -13,6 +13,10 @@ h1,h2,h3,h4,h5,h6 {
 	color: #c40300;
 }
 
+a {
+	color: #c40300;
+}
+
 #addTimer{
     display: flex;
     align-content: center;
