--- a/css/roulette.css
+++ b/css/roulette.css
@@ -1,3 +1,6 @@
+a {
+	color: #c40300;
+}
 body, html {
 	padding: 0;
 	margin: 0;
@@ -5,15 +8,7 @@ body, html {
     background-color: #000000;
 }
 
-title {
-	color: #c40300;
-}
-
-h1,h2,h3,h4,h5,h6 {
-	color: #c40300;
-}
-
-a {
+h1 {
 	color: #c40300;
 }
 
