--- a/css/roulette.css
+++ b/css/roulette.css
@@ -1,7 +1,7 @@
 body, html {
 	padding: 0;
 	margin: 0;
-    font-family: "Roboto", sans-serif; 
+    font-family: 'Source Code Pro', "Courier New", Courier, monospace; 
     background-color: #000000;
 }
 
