--- a/css/roulette.css
+++ b/css/roulette.css
@@ -158,7 +158,7 @@ button {
     padding: 10px 28px;
     top: 0;
     font-size: 30px;
-    font-family: "Open Sans", Helvetica;
+    font-family: 'Source Code Pro', "Courier New", Courier, monospace; 
     border-radius: 4px;
     border-bottom: 1px solid rgba( 28, 227, 125, 0.5 );
     background: rgb(196, 3, 0);
