--- a/css/roulette.css
+++ b/css/roulette.css
@@ -20,6 +20,15 @@ a {
 	text-decoration: none;
 }
 
+a[target="_blank"]::after {
+    content: " " url('data:image/svg+xml;utf8,<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" class=\"i-external\" viewBox=\"0 0 32 32\" width=\"16\" height=\"16\" fill=\"none\" stroke=\"#0a5\" stroke-linecap=\"round\" stroke-linejoin=\"round\" stroke-width=\"9.38%\"><path d=\"M14 9 L3 9 3 29 23 29 23 18 M18 4 L28 4 28 14 M28 4 L14 18\" /></svg>');
+}
+
+
+header {
+     border-bottom: 1px dashed #c40300;
+}
+
 nav {
     text-align: right;
     ul {
@@ -32,7 +41,7 @@ nav {
             margin-left: 0.5em;
             &:before {
                 content: ' /';
-                color: $h-color;
+                color: #c40300;
             }
         }
     }
