--- a/css/roulette.css
+++ b/css/roulette.css
@@ -53,6 +53,42 @@ nav {
     }
 }
 
+code, pre {
+    overflow: auto;
+    font-size: 16px;
+    padding: 4px 10px;
+    border-radius: 5px;
+    background-color: rgb(29, 29, 29);
+    box-shadow: inset 0 0 10px #0a0a0a, inset 0 0 15px #000;
+}
+
+blockquote {
+    border-left: 1px solid #c40300;
+    padding-left: 1em;
+}
+.title-a {
+    display: inline-block;
+    border: 1px dashed;
+    padding: 2px 15px;
+    margin-bottom: 1em;
+    h1:before{
+        content: "";
+    }
+    
+    &:hover > .title {
+        color: #000;
+    }
+}
+
+.title {
+    display: block;
+    font-size: 1.35em;
+    &:after {
+        content: "";
+    }
+}
+
+
 
 
 /*
