--- a/_layouts/default-roulette.html
+++ b/_layouts/default-roulette.html
@@ -64,8 +64,9 @@
 			let roulette = document.getElementById("fillMeUpDaddy");
 			roulette.innerHTML = "";
 			let tempBets = [
-				["player1", "red"], 
-				["player2", "yellowgreen"]
+				["Rock", "grey"], 
+				["Paper", "white"],
+				["Scissor","red"]
 			];
 			for(var i = 0; i < amountOfBoxes; i++){
 					var randomPlayer = rand(0, tempBets.length)
