--- a/css/roulette.css
+++ b/css/roulette.css
@@ -1,5 +1,24 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
 
+* {
+    box-sizing: border-box;
+    text-rendering: geometricPrecision;
+   
+}
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+    height: 5px;
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #c40300;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #000;
+}
+
 body, html {
 	padding: 0;
 	margin: 0;
