--- a/css/main.scss
+++ b/css/main.scss
@@ -14,7 +14,7 @@ $base-lh:          1.7;
 $spacing-unit:     30px;
 
 
-$h-color:          #c40300;
+$h-color:          #ffffff;
 // Try below colors!
 /* $h-color:       #07da21;
 $h-color:          #9315c5;
