--- a/_layouts/default-roulette.html
+++ b/_layouts/default-roulette.html
@@ -96,8 +96,8 @@
 
     function play () {
 			//add sound if you want
-      //var audio = new Audio('spin.mp3');
-      //audio.play();
+      var audio = new Audio('spin.mp3');
+      audio.play();
 			var offset = rand(0, amountOfBoxes*140-180)+180;
 			document.getElementById("fillMeUpDaddy").style.left = -(offset-180) + "px";
 			
