--- a/_layouts/default-roulette.html
+++ b/_layouts/default-roulette.html
@@ -66,7 +66,7 @@
 			let tempBets = [
 				["Rock", "grey"], 
 				["Paper", "white"],
-				["Scissor","red"]
+				["Scissor","#757575"]
 			];
 			for(var i = 0; i < amountOfBoxes; i++){
 					var randomPlayer = rand(0, tempBets.length)
