--- a/css/roulette.css
+++ b/css/roulette.css
@@ -35,7 +35,7 @@ h3 {
 }
 
 a {
-    color: #ffffff;
+    color: #5e5e5e;
     text-decoration: none;
     border-bottom: 1px solid;
     &:hover {
@@ -184,7 +184,7 @@ li, .winners > div {
 
 .playerName:hover{
     cursor: pointer;
-    filter: drop-shadow(16px 16px 20px red) invert(75%);
+    filter: drop-shadow(16px 16px 20px white) invert(75%);
 }
 
 .rouletteContainer{
