--- a/_layouts/default-roulette.html
+++ b/_layouts/default-roulette.html
@@ -19,7 +19,7 @@
 	    <a class="title-a" href="{{site.baseurl}}/"><h1 class="title">{{site.title}}</h1></a>
 	</header>
   
-  {{content}}
+		<h3>{{content}}</h3>
   
 	<body onload="init()">
 		<center>
