--- a/_layouts/default-roulette.html
+++ b/_layouts/default-roulette.html
@@ -11,12 +11,12 @@
 	<header>
 	    <nav>
 	        <ul>
+			<li><a class="title-a" href="{{site.baseurl}}/"><h1 class="title">{{site.title}}</h1></a></li>
 	            <li><a href="{{site.baseurl}}/">Home</a></li>
 	            <li><a href="{{site.baseurl}}/about">About</a></li>
 	            <li><a href="{{site.baseurl}}/contact">Contact</a></li>
 	        </ul>
 	    </nav>
-	    <a class="title-a" href="{{site.baseurl}}/"><h1 class="title">{{site.title}}</h1></a>
 	</header>
   
 		<h2>{{content}}</h2>
