--- a/_layouts/default-roulette.html
+++ b/_layouts/default-roulette.html
@@ -11,7 +11,7 @@
 	<header>
 	    <nav>
 	        <ul>
-			<li><a class="title-a" href="{{site.baseurl}}/"><h1 class="title">{{site.title}}</h1></a></li>
+		    <li><a class="title-a" href="{{site.baseurl}}/"><h1 class="title">{{site.title}}</h1></a></li>
 	            <li><a href="{{site.baseurl}}/">Home</a></li>
 	            <li><a href="{{site.baseurl}}/about">About</a></li>
 	            <li><a href="{{site.baseurl}}/contact">Contact</a></li>
@@ -50,7 +50,7 @@
 		<br><br>
 		<div>
 			<center>
-				<button onclick="clearAll(-1)">Clear all</button>
+				<button onclick="clearAll(-1)">Clear history</button>
 			</center>
 		</div>
 		<div id="winners" class="winners"></div>
@@ -83,12 +83,7 @@
         return Math.floor(Math.random() * (max - min)) + min;
     }
 		
-    var colors= ['aqua', 'fuchsia', 'gray', 'green', 
-								'lime', 'maroon', 'olive', 'orange', 'purple', 'red', 
-								'silver', 'teal', 'white', 'yellow', '#e6194b', '#3cb44b', '#ffe119', 
-								'#4363d8', '#f58231', '#911eb4', '#46f0f0', '#f032e6', '#bcf60c', 
-								'#fabebe', '#008080', '#e6beff', '#9a6324', '#fffac8', '#800000', 
-								'#aaffc3', '#808000', '#ffd8b1', '#808080', '#ffffff',];
+    var colors= ["grey","white","red","yellow","#bababa","#6f6f6f","#828282","#949494","#a7a7a7"];
 
     var width = 80;
 
