--- a/_layouts/default-roulette.html
+++ b/_layouts/default-roulette.html
@@ -50,7 +50,7 @@
 		<br><br>
 		<div>
 			<center>
-				<button onclick="clearAll(-1)">Clear history</button>
+				<button id="clearButton" onclick="clearAll(-1)">Clear history</button>
 			</center>
 		</div>
 		<div id="winners" class="winners"></div>
