--- a/_layouts/default-roulette.html
+++ b/_layouts/default-roulette.html
@@ -83,7 +83,7 @@
         return Math.floor(Math.random() * (max - min)) + min;
     }
 		
-    var colors= ["grey","white","red","yellow","#bababa","#6f6f6f","#828282","#949494","#a7a7a7","#5d5d5d","#4a4a4a","#373737","#252525","#c7c7c7","#d5d5d5","#e3e3e3"];
+    var colors= ["grey","white","#bababa","#6f6f6f","#828282","#949494","#a7a7a7","#5d5d5d","#4a4a4a","#373737","#252525","#c7c7c7","#d5d5d5","#e3e3e3"];
 
     var width = 80;
 
