--- a/_layouts/default-roulette.html
+++ b/_layouts/default-roulette.html
@@ -64,7 +64,7 @@
 			let roulette = document.getElementById("fillMeUpDaddy");
 			roulette.innerHTML = "";
 			let tempBets = [
-				["Rock", "5d5d5d"], 
+				["Rock", "#5d5d5d"], 
 				["Paper", "white"],
 				["Scissor","#5e5e5e"]
 			];
