--- a/css/roulette.css
+++ b/css/roulette.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
 
-@mixin media-query($device) {
-    @media screen and (max-width: $device) {
-        @content;
-    }
-}
+//@mixin media-query($device) {
+//    @media screen and (max-width: $device) {
+//        @content;
+//    }
+//}
 
 * {
     box-sizing: border-box;
@@ -39,10 +39,10 @@ body, html {
     	border-top: none;
 
     	padding: 0 20px;
-    	//@include media-query(600px) {
-        //    border: none;
-        //    padding: 10px;
-	//}
+    	@include media-query(600px) {
+            border: none;
+            padding: 10px;
+	}
 }
 
 h1 {
