--- a/_layouts/default-roulette.html
+++ b/_layouts/default-roulette.html
@@ -58,6 +58,11 @@
 		</center>
 	</div>
 	<div id="winners" class="winners"></div>
+<footer>
+    <p><small>Copyrights &copy; {{site.time | date: '%Y'}} {{site.title}}</small></p>
+    <p><small>&nbsp;&#124;&nbsp;Built with <span>❤</span> by <a href="http://webjeda.com">webjeda</a></small></p>
+</footer>
+{% include analytics.html %}
 </body>
 <script>
 	//Creates temporary elements an fills the array with them, ready for spinning
