--- a/css/roulette.css
+++ b/css/roulette.css
@@ -174,13 +174,7 @@ input {
 button {
     font-size: 48px;
 }
-ul{
-    display: flex;
-    flex-wrap: wrap;
-    overflow: hidden;
-    width: 80%;
-}
-li, .winners > div {
+.winners > div {
     float: left;
     min-width: 10%;
     list-style: none;
