--- a/css/roulette.css
+++ b/css/roulette.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
 
-
+@mixin media-query($device) {
+    @media screen and (max-width: $device) {
+        @content;
+    }
+}
 * {
     box-sizing: border-box;
     text-rendering: geometricPrecision;
