--- a/_layouts/default-roulette.html
+++ b/_layouts/default-roulette.html
@@ -1,24 +1,8 @@
+---
+layout:		default
+---
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{{ page.title }} - {{site.title}}</title>
-  <link rel="stylesheet" href="{{site.baseurl}}/css/roulette.css">
-</head>
-
-<body>
-<header>
-    <nav>
-        <ul>
-            <li><a href="{{site.baseurl}}/">Home</a></li>
-            <li><a href="{{site.baseurl}}/about">About</a></li>
-            <li><a href="{{site.baseurl}}/contact">Contact</a></li>
-        </ul>
-    </nav>
-    <a class="title-a" href="{{site.baseurl}}/"><h1 class="title">{{site.title}}</h1></a>
-</header>
-  
 	{{content}}
   
 <body onload="init()">
@@ -58,11 +42,6 @@
 		</center>
 	</div>
 	<div id="winners" class="winners"></div>
-<footer>
-    <p><small>Copyrights &copy; {{site.time | date: '%Y'}} {{site.title}}</small></p>
-    <p><small>&nbsp;&#124;&nbsp;Built with <span>❤</span> by <a href="http://webjeda.com">webjeda</a></small></p>
-</footer>
-{% include analytics.html %}
 </body>
 <script>
 	<!--Creates temporary elements an fills the array with them, ready for spinning-->
