--- a/_layouts/default-roulette.html
+++ b/_layouts/default-roulette.html
@@ -3,6 +3,9 @@ layout:		default
 ---
 <!DOCTYPE html>
 <html>
+<head>
+  <link rel="stylesheet" href="{{site.baseurl}}/css/roulette.css">
+</head>
 	{{content}}
   
 <body onload="init()">
