--- a/css/wordle.css
+++ b/css/wordle.css
@@ -25,7 +25,7 @@ td{
     width: 50px;
 }
 
-#Keyboard{
+.Keyboard{
     max-width: 320px;
     width: 65%;
     display: flex;
@@ -55,7 +55,7 @@ td{
     border: 0;
     margin-left: -2.5px;
     margin-right: -2.5px;
-    
+    touch-action: none;
     cursor: pointer;
 }
 .keyboard-button:hover{
@@ -78,7 +78,7 @@ td{
         max-width: 40px;
     }
 }
-@media screen and (max-width: 300px) {
+@media screen and (max-width: 400px) {
     body {
         font-size: 15px;
     }
@@ -94,8 +94,12 @@ td{
         font-size: 20px;
         width: 35px;
     }
-    
+    .Keyboard{
+        max-width: 100%;
+        width: 100%;
+    }
     .keyboard-button{
-        font-size: 10px;
+        padding: 9px;
+        font-size: 20px;
     }
 }
